--- a/AsteroidsKrof/MainWindow.xaml
+++ b/AsteroidsKrof/MainWindow.xaml
@@ -25,7 +25,7 @@
         <Rectangle Grid.Row="1" Grid.Column="0" Fill="LightGray"/>
         <Rectangle Grid.Row="1" Grid.Column="4" Fill="LightGray"/>
 
-        <ListBox x:Name="Asteroid_List" Background="AntiqueWhite" Grid.Column="0" Grid.RowSpan="4" 
+        <ListBox x:Name="Asteroid_List" ItemsSource="{Binding AsteroidsO}" Background="AntiqueWhite" Grid.Column="0" Grid.RowSpan="4" 
                   SelectionChanged="Asteroid_List_SelectionChanged"
                   MouseDoubleClick="Asteroid_List_MouseDoubleClick" Margin="0,0,10,10">
             <ListBox.ItemTemplate>
